<resources>
    <string name="app_name">InfoMed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="bills">Bills</string>
    <string name="results">Results</string>
    <string name="list">List</string>
    <string name="reminders">Reminders</string>
    <string name="family">Family</string>
    <string name="members">Members</string>

    <!-- Navigation Drawer menu labels -->
    <string name="emergency_contact">Emergency Contact</string>
    <string name="personal_info">Personal Info</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="medicine">Medicine</string>
    <string name="appointments">Appointments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>
</resources>
